Fix text alignment

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
 }
 
 .intro-chunk {
-  padding-left: 16px;
+  padding-left: 24px;
   width: 65%;
 }
 
